HttpUnit release notes

Known issues: none

8-Aug-00
Problems corrected:
    1. Parsing a response would crash if there were no nodes inside a form
Additions:
    1. WebResponse.getOptions and getOptionValues now return the displayed and parameter value options
       available to the user in a <select>
    2. WebRespose.getLinkWith() and .getLinkWithImageText() can now be used to locate a link in a page
       based on its text or the ALT text attribute of an enclosed image


4-Aug-00 0.9.5
General:
    1. Nested tables are now supported (examples to follow) by using WebTable.getTableCell
    2. table columns and rows used only for formatting may now be ignored using WebTable.purgeEmptyCells
    3. It is now easy to find a table in a page based on the text in its first non-blank column and row,
       using WebResponse.getTableStartingWith
    4. All form controls should now be supported
    5. There is a preliminary cookbook available
Additions:
    1. Deprecated WebTable.getCell, new method is getCellAsText
    2. Added WebTable.getTableCell to return a cell which could contain nested tables or just a DOM to examine
    3. Added WebTable.asText to return a 2D representation of the table
    4. Added WebTable.purgeEmptyCells to eliminate meaningless spacing information
    5. Added copyright notices to most source files
    6. Added support for checkboxes, radio buttons, text areas, and selects

    
29-Jun-00 0.9.1
Additions:
    1. The PostMethodWebRequest class is now public.
    2. Row and column spans are now handled
    3. Formatting inside table cells is ignored in computing the text value of a cell
    
19-Jun-00 0.9
Additions:
    1. The parser may be tested during the build by issuing the command: 'ant test -Dclasspath="%classpath%"'

    2. WebResponse now can return an array of the top-level tables in the HTML response.
       Each table may now be asked for its size and the contents of each of its cells.


5-Jun-00   0.8.2
Additions: