@@ -2,6 +2,13 @@ HttpUnit release notes
 
 Known issues: none
 
+
+21-Aug-00
+Additions:
+    1. Thanks to Jan Ohrstrom <Jan.Ohrstrom@edt.ericsson.se> for his additions to Web Conversation:
+       o setUserAgent allows httpunit to pretend to be a particular browser
+       o addCookie allows the test to include additional cookies for the servlets to respond to.
+
 8-Aug-00
 Problems corrected:
     1. Parsing a response would crash if there were no nodes inside a form
